force-app/main/default/objects/DRE__DTE_Assert__c/DRE__DTE_Assert__c.object-meta.xml
<CustomObject>
    <label>DTE Assert</label>
    <nameField>
        <displayFormat>DTEASR-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Asserts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>