force-app/main/default/objects/DRE__DTE_Assert__c/fields/DRE__DTE_Group__c.field-meta.xml
<CustomField>
    <fullName>DRE__DTE_Group__c</fullName>
    <label>DTE Assert Group</label>
    <referenceTo>DRE__DTE_Assert_Group__c</referenceTo>
    <relationshipLabel>Asserts</relationshipLabel>
    <relationshipName>DTE_Asserts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>