force-app/main/default/objects/DRE__DTE_Assert__c/fields/DRE__DTE_Plan__c.field-meta.xml
<CustomField>
    <fullName>DRE__DTE_Plan__c</fullName>
    <label>DTE Plan</label>
    <referenceTo>DRE__DTE_Plan__c</referenceTo>
    <relationshipLabel>Plan Asserts</relationshipLabel>
    <relationshipName>DTE_Asserts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>