force-app/main/default/objects/DRE__DTE_Assert__c/fields/DRE__Operator__c.field-meta.xml
<CustomField>
    <fullName>DRE__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>></fullName>
            </value>
            <value>
                <fullName>>=</fullName>
            </value>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>NOT CONTAINS</fullName>
            </value>
            <value>
                <fullName>STARTS WITH</fullName>
            </value>
            <value>
                <fullName>ENDS WITH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>