force-app/main/default/objects/DRE__DTE_Assert__c/fields/DRE__Value__c.field-meta.xml
<CustomField>
    <fullName>DRE__Value__c</fullName>
    <label>Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>